--- a/assets/stylesheets/components/_stats.scss
+++ b/assets/stylesheets/components/_stats.scss
@@ -22,6 +22,7 @@
 }
 
 .dds-stat-heading {
+  color: $color-gray;
   font-size: 1.65rem;
 }
 
@@ -35,7 +36,7 @@
 .dds-stat-small {
   
   .dds-stat-figure {
-    font-size: 3rem;
+    font-size: 3.25rem;
   }
 }
 
@@ -43,4 +44,8 @@
   color: $color-gray-dark;
   font-size: 1rem;
   margin-top: 1.3rem;
+
+  a {
+    text-decoration: none;
+  }
 }
