--- a/assets/stylesheets/components/_cards.scss
+++ b/assets/stylesheets/components/_cards.scss
@@ -1,5 +1,6 @@
 .dds-card {
   background-color: $color-white;
+  border-radius: 2px;
   box-shadow: 0 2px 2px rgba($color-gray-dark, 0.10);
   padding-bottom: 1.5rem;
 
@@ -48,6 +49,7 @@
   .dds-card-title {
     color: $color-gray;
     font-size: 1.5rem;
-    margin-bottom: 0.75rem;
+    font-weight: 300;
+    margin-bottom: 0.65rem;
   }
 }
