--- a/assets/stylesheets/includes/_header.scss
+++ b/assets/stylesheets/includes/_header.scss
@@ -29,3 +29,44 @@
     border-bottom: none;
   }
 }
+
+.site-nav-secondary {
+  display: none;
+
+  @include media($nav-width) {
+    background-color: $color-white;
+    border-bottom: 1px solid $color-gray-light;
+    clear: both;
+    display: block;
+    height: $height-nav-secondary;
+    padding-left: 3rem;
+    z-index: 15;
+  }
+
+  ul {
+    @include unstyled-list;
+
+    li {
+      display: inline;
+      padding-right: 3rem;
+    }
+  }
+
+  a {
+    color: $color-gray;
+    font-size: $h5-font-size;
+    font-weight: bold;
+    letter-spacing: 0.3px;
+    line-height: $height-nav-secondary;
+    text-decoration: none;
+
+    &:hover {
+      color: $color-primary;
+      text-decoration: underline;
+    }
+
+    &.usa-current {
+      color: $color-primary;
+    }
+  }
+}
