--- a/assets/stylesheets/layouts/_styleguide.scss
+++ b/assets/stylesheets/layouts/_styleguide.scss
@@ -7,6 +7,26 @@
   background-color: $color-gray-lightest;
 }
 
+// Main Content --------- //
+
+.main-content {
+  @include position(absolute, 4rem 0 0 null);
+  display: inline-block; // starting: not scrolled
+  margin-top: 4rem; // starting: not scrolled
+  position: relative;
+  width: 100%;
+  top: 6.3rem; // height of disclaimer + navbar on mobile
+
+  @include media($nav-width) {
+    width: calc(100% - #{$width-nav-sidebar});
+    top: 0;
+  }
+
+  .lt-ie9 & {
+    width: 75%;
+  }
+}
+
 .sidenav-mobile {
 
   @include media($nav-width) {
@@ -51,46 +71,6 @@
   }
 }
 
-.site-nav-secondary {
-  display: none;
-
-  @include media($nav-width) {
-    background-color: $color-white;
-    border-bottom: 1px solid $color-gray-light;
-    clear: both;
-    display: block;
-    height: $height-nav-secondary;
-    padding-left: 3rem;
-  }
-
-  ul {
-    @include unstyled-list;
-
-    li {
-      display: inline;
-      padding-right: 3rem;
-    }
-  }
-
-  a {
-    color: $color-gray;
-    font-size: $h5-font-size;
-    font-weight: bold;
-    letter-spacing: 0.3px;
-    line-height: $height-nav-secondary;
-    text-decoration: none;
-
-    &:hover {
-      color: $color-primary;
-      text-decoration: underline;
-    }
-
-    &.usa-current {
-      color: $color-primary;
-    }
-  }
-}
-
 // Sidebar Nav --------- //
 
 .sidenav {
@@ -104,8 +84,13 @@
     padding-right: 1rem;
     padding-left: 3rem;
     overflow-y: auto;
-    top: 5rem;
     width: $width-nav-sidebar;
+  }
+
+  &.sticky {
+    @include media($nav-width) {
+      top: 5rem;
+    }
   }
 
   .lt-ie9 & {
@@ -119,23 +104,15 @@
   }
 }
 
-// Main Content --------- //
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
 
-.main-content {
-  @include position(absolute, 4rem 0 0 null);
-  display: inline-block; // starting: not scrolled
-  margin-top: 4rem; // starting: not scrolled
-  position: relative;
-  width: 100%;
-  top: 6.3rem; // height of disclaimer + navbar on mobile
-
-  @include media($nav-width) {
-    width: calc(100% - #{$width-nav-sidebar});
-    top: 0;
-  }
-
-  .lt-ie9 & {
-    width: 75%;
+  &:before,
+  &:after {
+    content: '';
+    display: table;
   }
 }
 
