--- a/components/charts/index.html
+++ b/components/charts/index.html
@@ -23,7 +23,7 @@
   <div class="usa-accordion">
     <header class="usa-banner-header">
       <div class="usa-grid usa-banner-inner">
-      <img src="/assets/img/favicons/favicon-57.png" alt="U.S. flag">
+      <img src="/dds-docs/assets/img/favicons/favicon-57.png" alt="U.S. flag">
       <p>An official website of the United States government</p>
       <button class="usa-accordion-button usa-banner-button"
         aria-expanded="false" aria-controls="gov-banner">
@@ -33,7 +33,7 @@
     </header>
     <div class="usa-banner-content usa-grid usa-accordion-content" id="gov-banner">
       <div class="usa-banner-guidance-gov usa-width-one-half">
-        <img class="usa-banner-icon usa-media_block-img" src="/assets/img/icon-dot-gov.svg" alt="Dot gov">
+        <img class="usa-banner-icon usa-media_block-img" src="/dds-docs/assets/img/icon-dot-gov.svg" alt="Dot gov">
         <div class="usa-media_block-body">
           <p>
             <strong>The .gov means it’s official.</strong>
@@ -50,7 +50,7 @@
     <button class="usa-menu-btn">Menu</button>
     <div class="usa-logo site-logo" id="logo">
       <em class="usa-logo-text">
-        <a href="/" title="Home" aria-label="Home">
+        <a href="/dds-docs/" title="Home" aria-label="Home">
           Data Design Standards
         </a>
       </em>
@@ -64,7 +64,7 @@
   <li>
     
       
-<a href="/components/" class="usa-current">UI components</a>
+<a href="/dds-docs/components/" class="usa-current">UI components</a>
 
   
 
@@ -84,7 +84,7 @@
   <li>
     
       
-<a href="/components/">Overview</a>
+<a href="/dds-docs/components/">Overview</a>
 
     
   </li>
@@ -93,7 +93,7 @@
   <li>
     
       
-<a href="/components/cards/">Cards</a>
+<a href="/dds-docs/components/cards/">Cards</a>
 
     
   </li>
@@ -102,7 +102,7 @@
   <li>
     
       
-<a href="/components/charts/" class="usa-current">Charts</a>
+<a href="/dds-docs/components/charts/" class="usa-current">Charts</a>
 
   
     
@@ -181,7 +181,7 @@
   <li>
     
       
-<a href="/components/stats/">Stats</a>
+<a href="/dds-docs/components/stats/">Stats</a>
 
     
   </li>
@@ -190,7 +190,7 @@
   <li>
     
       
-<a href="/components/tables/">Tables</a>
+<a href="/dds-docs/components/tables/">Tables</a>
 
     
   </li>
@@ -366,7 +366,7 @@
 </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.17/d3.js"></script>
-    <script src="/assets/javascripts/application.js"></script>
+    <script src="/dds-docs/assets/javascripts/application.js"></script>
 
   </body>
 
