Add Mock Typography Content
Adds mock typography content and styles.

* Create Typography component
* Add Typography to DDS nav
* Add mock typography content

--- a/assets/stylesheets/application.scss
+++ b/assets/stylesheets/application.scss
@@ -6,8 +6,7 @@
 @import "../uswds/stylesheets/all";
 @import "c3/c3.scss";
 
-// Demo Delete this line and import statement when you begin
-@import "core/base";
+@import "core/typography";
 
 @import "components/all";
 @import "includes/all";
